--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -9,6 +9,7 @@ $brand-white:               #f7f0e7;
 
 // Fonts
 $font-base:                 'Noto Sans', sans-serif;
+$fa-font-path:              "../bower_components/font-awesome/fonts" !default;
 $font-color-light:          $brand-light-blue !default;
 $font-color-dark:           $brand-dark-blue !default;
 
